k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: quiz-ingress
  namespace: quiz
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: api.quiz.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 3000
    - host: auth.quiz.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: auth
                port:
                  number: 3050
    - host: landing.quiz.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: landing
                port:
                  number: 3010
